<resources>
    <string name="app_name">ProEvent</string>
    <string name="default_font">Inter-Regular.ttf</string>
    <string name="default_font_path">fonts/Inter-Regular.ttf</string>
    <string name="default_font_bold_path">fonts/Inter-Bold.ttf</string>
    <string name="authorization_title">Вход</string>
    <string name="authorization_confirm">Войти</string>
    <string name="remember_password">Не помню пароль</string>
    <string name="registration">Регистрация</string>
    <string name="e_mail_input_title">E-mail</string>
    <string name="password_input_title">Пароль</string>
    <string name="authorization_data_invalid">Неправильный e-mail или пароль</string>
    <string name="home_title">Главная</string>
    <string name="settings_title">Настройки</string>
    <string name="has_account">Уже есть аккаунт?</string>
    <string name="authorize">Войти</string>
    <string name="password_confirm_tite">Подтверждение пароля</string>
    <string name="registration_title">Регистрация</string>
    <string name="license_i_agree_with">Я согласен (а) с\u0020</string>
    <string name="license_condition_1">Условиями использования</string>
    <string name="license_condition_separator">\nи\u0020</string>
    <string name="license_condition_2">Политикой конфиденциальности</string>
    <string name="code_explanation_text">На адрес электронной почты\n%1$s отправлен\n4-значный код. Введите его ниже.</string>
    <string name="registration_continue">Зарегистрироваться</string>
    <string name="if_data_invalid_text">Если e-mail указан неверно,\nвернитесь на шаг назад</string>
    <string name="back">Назад</string>
    <string name="license_1_title">Условия использования</string>
    <string name="license_2_title">Политика конфиденциальности</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="e_mail_input_hint">Введите ваш e-mail</string>
    <string name="password_input_hint">Введите пароль</string>
    <string name="password_confirm_hint">Подтвердите ваш пароль</string>
    <string name="login_input_title">Логин</string>
    <string name="login_input_hint">Придумайте логин</string>
    <string name="continue_text">Продолжить</string>
    <string name="password_recovery_explanation_text">Введите адрес электронной почты,\nуказанный при регистрации аккаунта.\nНа данный адрес будет выслано\nписьмо с дальнейшими инструкциями.</string>
    <string name="account_text">Профиль</string>
    <string name="security_text">Безопасность</string>
    <string name="subscriptions_text">Подписки</string>
    <string name="contacts_text">Контакты</string>
    <string name="help">Помощь</string>
    <string name="about_text">О приложении</string>
    <string name="logout_text">Выйти</string>
    <string name="profile_picture_placeholder">Изменить фото профиля</string>
    <string name="name_input_title">ФИО</string>
    <string name="phone_input_title">Телефон</string>
    <string name="date_of_birth_input_title">Дата рождения</string>
    <string name="position_input_title">Должность</string>
    <string name="role_input_title">О себе</string>
    <string name="name_input_hint">Введите ваши ФИО</string>
    <string name="phone_edit_hint">Введите номер телефона</string>
    <string name="date_of_birth_edit_hint">Введите дату вашего рождения</string>
    <string name="position_edit_hint">Введите вашу должность</string>
    <string name="role_edit_hint">Например: куратор, волонтер</string>
    <string name="save_text">Сохранить</string>
    <string name="old_password_title">Старый пароль</string>
    <string name="old_password_input_hint">Введите старый пароль</string>
    <string name="new_password_title">Новый пароль</string>
    <string name="new_password_input_hint">Введите новый пароль</string>
    <string name="confirm_new_password_hint">Повторите новый пароль</string>
    <string name="confirm_password_title">Повторите пароль</string>
    <string name="dateFormat">yyyy-MM-dd</string>
    <string name="extendedDateFormat">yyyy-MM-dd\'T\'HH:mm:ss</string>
    <string name="contacts_title">Контакты</string>
    <string name="add_contact">Добавить контакт</string>
    <string name="no_contacts">Здесь пока ничего нет</string>
    <string name="contact_add_explanation">Введите email пользователя, которого хотите добавить в свой список контактов.</string>
    <string name="participant_add_by_profile_value_explanation">Введите e-mail и имя пользователя, которого хотите пригласить в качестве участника.</string>
    <string name="search_contact">Поиск</string>
    <string name="contact_search_hint">Введите e-mail пользователя</string>
    <string name="contact_invite_explanation">Пользователя с таким email в системе нет. Чтобы пригласить пользователя, укажите имя.</string>
    <string name="name_edit_hint">Введите имя</string>
    <string name="invite_contact">Продолжить</string>
    <string name="delete_contact_question">Удалить контакт?</string>
    <string name="decline_contact_request_question">Отклонить запрос?</string>
    <string name="accept_contact_request_question">Принять заявку?</string>
    <string name="cancel_request_question">Отменить заявку?</string>
    <string name="yes_text">Да</string>
    <string name="no_text">Нет</string>
    <string name="all_contacts">Все контакты</string>
    <string name="outgoing_contacts">Исходящие заявки</string>
    <string name="incoming_contacts">Входящие заявки</string>
    <string name="events_title">Мероприятия</string>
    <string name="chat_title">Чат</string>
    <string name="no_events">Здесь пока ничего нет</string>
    <string name="add_event">Добавить мероприятие</string>
    <string name="all_actual_events">Все актуальные мероприятия</string>
    <string name="my_actual_events">Мои актуальные мероприятия</string>
    <string name="my_completed_events">Мои завершенные мероприятия</string>
    <string name="actual_events">Мероприятия: Актуальные</string>
    <string name="completed_events">Мероприятия: Завершенные</string>
    <string name="search_edit_hint">Поиск</string>
    <string name="empty_string"></string>
    <string name="finish_event">Завершить мероприятие</string>
    <string name="copy_event">Скопировать мероприятие</string>
    <string name="edit_event_image">Изменить фото мероприятия</string>
    <string name="event_name_input_title">Название</string>
    <string name="event_name_input_hint">Введите название</string>
    <string name="date_input_title">Дата проведения</string>
    <string name="date_input_hint">Выберите дату проведения</string>
    <string name="location_input_title">Место проведения</string>
    <string name="location_input_hint">Введите адрес</string>
    <string name="description_input_title">Описание</string>
</resources>