<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_tab"
        android:icon="@drawable/ic_home"
        android:title="@string/home_title"/>

    <item
        android:id="@+id/contacts_tab"
        android:icon="@drawable/ic_contacts"
        android:title="@string/contacts_title" />

    <item
        android:id="@+id/chat_tab"
        android:icon="@drawable/ic_messages"
        android:title="@string/chat_title" />

    <item
        android:id="@+id/events_tab"
        android:icon="@drawable/ic_event"
        android:title="@string/events_title" />

    <item
        android:id="@+id/settings_tab"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings_title" />
</menu>
