<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        fontPath="@string/default_font_bold_path"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:gravity="center_horizontal"
        android:paddingTop="40dp"
        android:text="@string/settings_title"
        android:textColor="@color/ProEvent_blue_800"
        android:textSize="20sp"
        tools:ignore="MissingPrefix" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="23dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/account"
                style="@style/ProEventSettingsButtonItem"
                android:text="@string/account_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/security"
                style="@style/ProEventSettingsButtonItem"
                android:text="@string/security_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/subscriptions"
                style="@style/ProEventSettingsButtonItem"
                android:text="@string/subscriptions_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/help"
                style="@style/ProEventSettingsButtonItem"
                android:text="@string/help" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/about"
                style="@style/ProEventSettingsButtonItem"
                android:text="@string/about_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/logout"
                style="@style/ProEventSettingsButtonItem"
                android:text="@string/logout_text"
                app:icon="@drawable/ic_logout" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>